Working workout_scraper lambda

--- a/sheiva_cloud/sheiva_aws/lambda/kuda/scrapers/workout/Dockerfile
+++ b/sheiva_cloud/sheiva_aws/lambda/kuda/scrapers/workout/Dockerfile
@@ -1,5 +1,14 @@
 FROM public.ecr.aws/lambda/python:3.11
 
+RUN yum install git -y
+
+# Replace this id_rsa process at some point
+COPY id_rsa /root/.ssh/id_rsa
+
+RUN echo known_hosts > /root/.ssh/known_hosts
+RUN chmod 600 /root/.ssh/id_rsa
+RUN ssh-keyscan github.com >> /root/.ssh/known_hosts
+
 # Copy requirements.txt
 COPY requirements.txt ${LAMBDA_TASK_ROOT}
 
