--- a/sheiva_cloud/sheiva_aws/lambda/kuda/scrapers/workout/Dockerfile
+++ b/sheiva_cloud/sheiva_aws/lambda/kuda/scrapers/workout/Dockerfile
@@ -20,7 +20,7 @@ RUN pip install -r requirements.txt
 
 # Add env vars
 ENV WORKOUTLINK_QUEUE_URL="https://sqs.eu-west-1.amazonaws.com/381528172721/WorkoutLinkQueue"
-ENV S3_BUCKET_NAME="male-workout-links"
+ENV SHEIVA_BUCKET="sheiva-scraped-data"
 
 # Set the CMD to your handler (could also be done as a parameter override outside of the Dockerfile)
 CMD [ "lambda_function.handler" ]
