--- a/sheiva_cloud/sheiva_aws/lambda/containers/workout_scraper_trigger/Dockerfile
+++ b/sheiva_cloud/sheiva_aws/lambda/containers/workout_scraper_trigger/Dockerfile
@@ -20,7 +20,8 @@ RUN pip install -r requirements.txt
 
 # Add env vars
 ENV WORKOUTLINK_QUEUE_URL="https://sqs.eu-west-1.amazonaws.com/381528172721/WorkoutLinkQueue"
-ENV S3_BUCKET_NAME="male-workout-links"
+ENV WORKOUT_SCRAPE_TRIGGER_QUEUE_URL_URL = "https://sqs.eu-west-1.amazonaws.com/381528172721/WorkoutScrapeTriggerQueue"
+ENV SHEIVA_SCRAPE_BUCKET="sheiva-scraped-data"
 
 # Set the CMD to your handler (could also be done as a parameter override outside of the Dockerfile)
 CMD [ "lambda_function.handler" ]
