--- a/sheiva_cloud/sheiva_aws/aws_lambda/containers/workout_scraper_trigger/Dockerfile
+++ b/sheiva_cloud/sheiva_aws/aws_lambda/containers/workout_scraper_trigger/Dockerfile
@@ -22,6 +22,7 @@ RUN pip install -r requirements.txt
 ENV WORKOUTLINK_QUEUE_URL="https://sqs.eu-west-1.amazonaws.com/381528172721/WorkoutLinkQueue"
 ENV WORKOUT_SCRAPE_TRIGGER_QUEUE_URL="https://sqs.eu-west-1.amazonaws.com/381528172721/WorkoutScrapeTriggerQueue"
 ENV SHEIVA_SCRAPE_BUCKET="sheiva-scraped-data"
+ENV GENDER="male"
 
 # Set the CMD to your handler (could also be done as a parameter override outside of the Dockerfile)
 CMD [ "lambda_function.handler" ]
