--- a/sheiva_cloud/sheiva_aws/aws_lambda/containers/workout_scraper/Dockerfile
+++ b/sheiva_cloud/sheiva_aws/aws_lambda/containers/workout_scraper/Dockerfile
@@ -22,6 +22,7 @@ RUN pip install -r requirements.txt
 ENV MAIN_QUEUE="https://sqs.eu-west-1.amazonaws.com/381528172721/WorkoutLinkQueue"
 ENV DEADLETTER_QUEUE_URL="https://sqs.eu-west-1.amazonaws.com/381528172721/WorkoutLinkQueueDeadLetter"
 ENV BUCKET="sheiva-scraped-data"
+ENV GENDER="male"
 
 # Set the CMD to your handler (could also be done as a parameter override outside of the Dockerfile)
 CMD [ "lambda_function.handler" ]
