--- a/.pylintrc
+++ b/.pylintrc
@@ -2,5 +2,5 @@
 max-line-length = 79
 
 [MASTER]
-ignore = .git, __pycache__, .venv, setup.py, conftest.py .vscode
+ignore = .git, __pycache__, .venv, setup.py, conftest.py
 disable: C0103, R0801, E0401, R0903, E1101, E0611, C0114
