--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,10 @@ dependencies = [
 	"pandas",
 ]
 
+[build-system]
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
+
 [tool.setuptools.packages]
 find = {}
 
