--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,3 +1,3 @@
 [settings]
-known_third_party = boto3,kuda,pandas
+known_third_party = boto3,classes,clients,containers,event_handlers,kuda,message_parsers,pandas,utils
 line_length = 79
